<resources>
    <string name="app_name">Szakdoga</string>
    <string name="facebook_application_id" translatable="false">617674105594444</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb617674105594444</string>
    <string name="twitter_consumer_key" translatable="false">DHPcziBsHvgXRKjfZLWclkNWy</string>
    <string name="twitter_consumer_secret" translatable="false">QVTUQ0kPNoUvJPB69O8WLghYyLDPdIHdQUIWcpFv2cOqL57dXD</string>
    <string name="splash_your">Your</string>
    <string name="splash_personal">Personal</string>
    <string name="splash_assistant">Assistant</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="todo">reduce_alpha</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_create_one">Don\'t have an account? Create one!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="forgot_password_text">To recover your password, you need to add your registered email address. We will send an email to you.</string>
    <string name="send_btn">Send</string>
    <string name="create_your_account">Create your Account!</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_if_have_account">Already have an account? Sign in!</string>
    <string name="layout_registration">Registration</string>
    <string name="sign_in_todo">sign_in_welcome</string>
    <string name="string_name">Name</string>
    <string name="logout">Logout</string>
    <string name="notes">Notes</string>
    <string name="home_menu">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_note">Title</string>
    <string name="duedate">DueDate</string>
    <string name="your_notes">Your Notes</string>
    <string name="adding_new_notes">adding new notes</string>
    <string name="note_description">Description</string>
    <string name="note_date">Date</string>
    <string name="note_priority">Priority:</string>
    <string name="plus">+</string>
    <string name="notecard">notecard</string>
    <string name="edit_btn">edit button</string>
    <string name="delete_btn">delete button</string>
    <string name="updatebtn">Update</string>
    <string name="welcome_text">Are you an organizer or a participant?</string>
    <string name="organizer">Organizer</string>
    <string name="participant">Participant</string>
    <string name="imagebutton_todo">Welcome_button</string>
    <string name="participant_welcome_text">Find the best programs and enjoy the events!</string>
    <string name="sign_in">Sign in!</string>
    <string name="sign_out">Sign out</string>
    <string name="map">Map</string>
    <string name="events">Events</string>
    <string name="smartevents">SmartEvents</string>
    <string name="splash_image">splash image</string>
    <string name="smart_events">SmartEvents</string>
    <string name="profile">Profile</string>
    <string name="welcome_sy">Welcome sy</string>
    <string name="organizer1">organizer</string>
    <string name="give_somebody_organizer_privilege">Give somebody privilige to organize</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="eventbackground">eventBackground</string>
    <string name="imagemaplocation">imageMapLocation</string>
    <string name="photosetting">photoSetting</string>
    <string name="deleteeventbutton">deleteEventButton</string>
    <string name="editeventbutton">editEventButton</string>
    <string name="time">Time</string>
    <string name="new_event">New event</string>
    <string name="information">information</string>
    <string name="activate">activate</string>
    <string name="phone_book">Phone book</string>
    <string name="calculator">Calculator</string>
    <string name="emails">emails</string>
    <string name="organizers">Organizers</string>
    <string name="events_you_ve_liked">Events you\'ve liked</string>
    <string name="name">Name</string>
    <string name="editorganizer">editOrganizer</string>
    <string name="revoke_permission">Revoke permission</string>
    <string name="upload_a_picture_to_the_storage">Upload a picture to the storage</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="uploaded_pictures">Uploaded pictures</string>
    <string name="create_a_new_event">Create a new Event</string>
    <string name="create">Create</string>
    <string name="back1">Back</string>
    <string name="set">Set</string>
    <string name="festivals">Festivals</string>
    <string name="english">english</string>
    <string name="choose_a_festival">Choose a festival</string>
    <string name="editing">editing</string>
    <string name="deletebutton">deleteButton</string>
    <string name="place">Place</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="To">To</string>
    <string name="email_is_required">Email is required.</string>
    <string name="password_is_required">Password is required.</string>
    <string name="logged">Logged in successfully!</string>
    <string name="email_verification">Please verify your email.</string>
    <string name="errorLog">Error! Something is wrong!</string>
    <string name="firsNameReq">First name is required.</string>
    <string name="lastNameReq">Last name is required.</string>
    <string name="password_must_be">Password must be >= 6 characters.</string>
    <string name="two_pass_not_eq">Confirm password and password do not match</string>
    <string name="verification_sent">Verification email has been sent.</string>
    <string name="verification_not_sent">Verification email has not been sent.</string>
    <string name="user_created">User created. Verify your email!</string>
    <string name="reset_link">Reset link sent to your email.</string>
    <string name="reset_link_not">Error! Reset link is NOT sent.</string>
    <string name="festival_created">Festival is created</string>
    <string name="festival_not_created">Festival is not created</string>
    <string name="want_delete">Are you sure you want to delete this festival?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="festival_deleted">Festival is deleted</string>
    <string name="festival_not_deleted">Festival is not deleted</string>
    <string name="festival_updated">Festival is updated</string>
    <string name="festival_not_updated">Festival is not updated</string>
    <string name="event_created">New event is created</string>
    <string name="event_not_created">New event is not created</string>
    <string name="add_location">Add a location</string>
    <string name="event_not_updated">Event is not updated</string>
    <string name="event_updated">Event is updated</string>
    <string name="date_not_updated">Date is not updated</string>
    <string name="want_delete_event">Are you sure you want to delete this event?</string>
    <string name="event_deleted">Event is not deleted</string>
    <string name="photo_downloading">Something is wrong while downloading the pictures.</string>
    <string name="viewpageritem">viewPagerItem</string>
    <string name="create_new_item">Create a new Note</string>
    <string name="Low">Low</string>
    <string name="High">High</string>
    <string name="no_user">There is no user with this email</string>
    <string name="give_permission">You can give someone permission if he/she is registered.</string>
    <string name="has_to_be_org">Someone has to be an organizer.</string>


</resources>