<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/events"
        android:icon="@drawable/event"
        android:title="@string/events"
        app:cnb_iconColor="#fff"
        app:cnb_textColor="#fff"
        app:cnb_backgroundColor="#ff785b"
        />

    <item android:id="@+id/map2"
        android:icon="@drawable/placeholder"
        android:title="@string/map"
        app:cnb_iconColor="#fff"
        app:cnb_textColor="#fff"
        app:cnb_backgroundColor="#ff785b"
        />
    <item android:id="@+id/profile"
        android:icon="@drawable/user"
        android:title="@string/profile"
        app:cnb_iconColor="#fff"
        app:cnb_textColor="#fff"
        app:cnb_backgroundColor="#ff785b"
        />
</menu>