<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home_menu"
        app:cnb_iconColor="#fff"
        app:cnb_textColor="#fff"
        app:cnb_backgroundColor="#ff785b"
        />

    <item android:id="@+id/map"
        android:icon="@drawable/placeholder"
        android:title="@string/map"
        app:cnb_iconColor="#fff"
        app:cnb_textColor="#fff"
        app:cnb_backgroundColor="#ff785b"
        />

    <item android:id="@+id/notes"
        android:icon="@drawable/notepic"
        android:title="@string/notes"
        app:cnb_iconColor="#fff"
        app:cnb_textColor="#fff"
        app:cnb_backgroundColor="#ff785b"
        />



</menu>