<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    app:cardCornerRadius="12dp"
    android:backgroundTint="#C85C5858">
    <TextView
        android:id="@+id/festivalName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/festivalPlace"
        android:text="@string/place"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/festivalDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_date"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/delete_festival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_delete_24"
        android:layout_gravity="start|top"
        android:padding="5dp"
        android:contentDescription="@string/deletebutton" />
    <ImageView
        android:id="@+id/edit_festival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_edit_24"
        android:layout_gravity="top|end"
        android:padding="5dp"
        android:contentDescription="@string/editing" />


</androidx.cardview.widget.CardView>