<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_menu_to_organizer.NotesFragment"
    android:background="@drawable/feather"
    android:orientation="vertical">

    <TextView
        android:id="@+id/notesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_notes"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:padding="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="475dp"
        android:id="@+id/list"
        android:layout_below="@+id/notesText"
        tools:listitem="@layout/notecard"/>

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="85dp"
        android:layout_marginEnd="20dp"
        android:layout_above="@android:id/list"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/plus"
        android:textSize="30sp"
        android:id="@+id/fab"
        android:background="@drawable/floating_btn"
        android:contentDescription="@string/adding_new_notes" />


</RelativeLayout>